--- a/css/index.css
+++ b/css/index.css
@@ -10,6 +10,17 @@
 }
 .video-container{
     overflow: hidden;
+    
+  
+}
+.video-container video{
+    object-fit: fill;
+}
+@media(max-width:700px){
+    
+    .video-container video{
+        object-fit: cover;
+    }
 }
 .wrapper-content-container{
     position: absolute;
@@ -21,6 +32,7 @@
     flex-wrap: wrap;
     width: 100%;
     height: 100vh;
+
    
 }
 .wrapper-content{
@@ -66,4 +78,13 @@
     top: 10px;
     left: 95%;
     display: none;
+}
+.x-btn{
+    width: 30px;
+    height: 30px;
+   
+}
+.btn-stop{
+    border-radius: 50%;
+    border: none;
 }
