--- a/css/index.css
+++ b/css/index.css
@@ -53,7 +53,7 @@
     border: none;
     background:none;
     cursor: pointer;
-    padding: 0px 0px 50px;
+    padding-bottom: 50px;
 }
 .btn-try{
     margin-bottom: 20px;
@@ -87,4 +87,12 @@
 .btn-stop{
     border-radius: 50%;
     border: none;
+}
+.btn-try:hover{
+    box-shadow: 0px 0px 5px 3px rgb(255,109,109);
+    transition: all 0.7s;
+}
+.wrapper-content p{
+    font-family: 'Exo', sans-serif;
+    font-size: 14px;
 }
