--- a/css/partners.css
+++ b/css/partners.css
@@ -46,3 +46,43 @@ margin-bottom: 50px;
 align-items: center;
 text-align: center;
 }
+.sponsors{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-around;
+    width: 100%;
+    flex-wrap: wrap;
+}
+@media(max-width:400px){
+.sponsors{
+    flex-direction: column;
+}
+}
+.sponsor-1 a{
+    cursor: pointer;
+    line-height: 80px;
+    
+}
+.sponsor-1 img{
+    margin-bottom: 30px;
+}
+.sponsor-1{
+    display: block;
+}
+.sponsor-1 a::before{
+    display: block;
+    content: "";
+    position: absolute;
+    opacity: 1;
+    border: 8px solid transparent;
+    border-bottom: 8px solid #ff6d6d;
+    transition: 0.7s;
+    
+    
+    
+}
+
+.sponsor-1 a:hover::before{
+    opacity: 1;
+}
