--- a/css/try-form.css
+++ b/css/try-form.css
@@ -1,10 +1,13 @@
 .try-form{
     position: fixed;
-    top: 50%;
-    left: 50%;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
     width: 500px;
     height: 500px;
     background-color: blue;
-   
-    z-index: 500;
+    z-index: 5;
+    top: 25vh;
+    left: 75vh;
+
 }
