--- a/css/try-form.css
+++ b/css/try-form.css
@@ -1,13 +1,53 @@
 .try-form{
     position: fixed;
     display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    width: 500px;
-    height: 500px;
-    background-color: blue;
-    z-index: 5;
-    top: 25vh;
-    left: 75vh;
+    flex-direction: column;
+    background-color: #1f2442;
+    z-index: 999;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    padding: 5%;
+    background-color: #1f2442;
+    text-align: center;
 
+    align-items: center;
+    color: #ff6d6d;
+
+}
+.try-form input{
+    display: inline-block;
+    height: 50px;
+    width: 215px;
+    -moz-box-sizing: border-box;
+    -ms-box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    -o-box-sizing: border-box;
+    box-sizing: border-box;
+    border-radius: 5px;
+    padding: 10px 25px;
+    font-family: 'Exo';
+    font-size: 16px;
+    text-transform: uppercase;
+    margin:0px 20px 30px
+}
+.try-form input[type=submit]{
+    background-color: #ff6d6d;
+    color: #FFFFFF;
+    border: none;
+    cursor: pointer;
+}
+.try-close-btn{
+    display:block;
+    height: 50px;
+    width: 215px;
+    box-sizing: border-box;
+    border-radius: 5px;
+    padding: 10px 25px;
+    font-size: 16px;
+    font-family: 'Exo';
+    text-transform: uppercase;
+    background-color: #ff6d6d;
+    color: #FFFFFF;
+    border: none;
 }
