--- a/css/monitor.css
+++ b/css/monitor.css
@@ -53,4 +53,5 @@ font-family: 'Exo', sans-serif;
     font-size: 40px;
     line-height: 50px;
     font-weight: normal;
+    margin: 10px 20px 10px 20px;
 }
