--- a/css/features.css
+++ b/css/features.css
@@ -3,14 +3,7 @@
     background-color: #f6f5f3; ;
     
 }
-.wrapper{
-    position: relative;
-    min-height: 350px;
-    padding: 135px 10% 65px 10%;
-    text-align: center;
-    display: flex;
-    flex-direction: column;
-}
+
 @media (max-width:700px) {
 
     .features{
@@ -25,5 +18,42 @@
     text-transform: uppercase;
     letter-spacing: 2px;
     font-weight: bold;
+    color: #ff6d6d;
+}
+.features-small-titles{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-around;
+    padding-bottom: 100px;
+}
+.small-title {
+    max-width: 33.33%;
+}
+.small-title a{
+    text-decoration: none;
+    font-family: 'Exo',sans-serif;
+    font-size: 22px;
+    line-height: 48px;
+    font-weight: bold;
+    color: #000000;
+    transition: all 0.7s;
+}
+.small-title img{
+    position: relative;
+    margin-bottom: 10px;
+    width: 70px;
+    height: 70px;
+    transition: 0.2s;
+}
+.small-title p{
+    display: inline-block;
+    color: #000000;
+   vertical-align: top;
+   font-weight: 500;
+   letter-spacing: 1px;
+}
+.small-title a:hover{
     color: #ff6d6d;
 }
