--- a/css/header.css
+++ b/css/header.css
@@ -1,9 +1,10 @@
 .header{
     position: fixed;
     top: 50%;
+    left: 80%;
     text-align: right;
     z-index: 20;
-    width: 100%;
+    width: 20%;
     display: flex;
     flex-direction: column;
 }
