--- a/css/style.css
+++ b/css/style.css
@@ -2,3 +2,20 @@
 .container{
     min-width: 300px;
 }
+.wrapper h3{
+
+}
+.wrapper h2{
+    margin-bottom: 80px;
+    font-size: 40px;
+    line-height: 50px;
+    font-weight: normal;
+}
+.wrapper{
+    position: relative;
+    min-height: 350px;
+    padding: 135px 10% 65px 10%;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+}
