--- a/css/partners.css
+++ b/css/partners.css
@@ -1,14 +1,15 @@
 
 .partners{
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     background-image: url(/img/bg/bgclients.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     width: 100%;
-    width: inherit;
+   justify-content: center;
+   align-items: center;
     flex-wrap: wrap;
-  
+  padding: 0px 0px 0px 0px;
 }
 
 .client-cards{
@@ -19,10 +20,15 @@
     margin-top: 100px;
     min-width: 300px;
     flex-wrap: wrap;
+
 }
 @media(max-width:500px){
     .client-cards{
         flex-direction: column;
+        flex-wrap: wrap;
+        align-items: center;
+        justify-content: center;
+        min-width: none;
     }
 }
 .client-cards h3,p{
