--- a/css/partners.css
+++ b/css/partners.css
@@ -1,7 +1,7 @@
 
 .partners{
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     background-image: url(/img/bg/bgclients.jpg);
     background-repeat: no-repeat;
     background-size: cover;
@@ -57,9 +57,9 @@ text-align: center;
     flex-direction: row;
     align-items: center;
     justify-content: space-around;
-    width: 70%;
+   
     flex-wrap: wrap;
-    margin: 0px 100px 0px 200px;
+  
 }
 @media(max-width:400px){
 .sponsors{
@@ -73,6 +73,10 @@ text-align: center;
 }
 .brands img{
     margin-bottom: 30px;
+  
+}
+.brands img:nth-child(1){
+    margin-left: 50px;
 }
 .brands{
     display: block;
