--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,7 @@
-.index{
+.main{
     position: relative;
     width: 100%;
-    height: 100vh;
+    height: auto;
     min-height:480px ;
     display: block;
     padding: 0;
@@ -14,6 +14,8 @@
 }
 .video-container video{
     object-fit: fill;
+   height: 100vh;
+   width: 100%;
 }
 @media(max-width:700px){
     
