--- a/css/introduction.css
+++ b/css/introduction.css
@@ -11,6 +11,51 @@
     padding-bottom: 160px;
     min-height: 300px;
 }
-.introduction h3{
-    color: black;
+ @media(max-width:1100px){
+   .introduction{
+    background-size: 100% 100%;
+    margin-top: 50px;
+    margin-bottom: 50px;
+   }
+ }
+.introduction-content{
+    width: 60%;
+    padding: 5% 10% 0 10%;
+    box-sizing: border-box;
+    text-align: left;
+}
+@media(max-width:1100px){
+    .introduction-content{
+        width: 100%;
+        text-align: center;
+    }
+}
+.introduction-content h3{
+    color: #ff6d6d;
+    font-family: 'Exo', sans-serif;
+    margin-bottom: 15px;
+   font-weight: 700;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    font-size: 1.2em;
+    margin-top: 5%;
+
+}
+.introduction-content h2{
+    margin-bottom: 50px;
+    font-family: 'Exo',sa;
+    font-size: 40px;
+    line-height: 50px;
+    letter-spacing: 1px;
+}
+.introduction p{
+    color: #282828;
+    margin-bottom: 40px;
+    font-family: 'Exo',sans-serif;
+    font-size: 16px;
+    font-weight: 500;
+}
+.dots{
+    color: #ff6d6d;
+    font-size: 2emx;
 }
