--- a/css/footer.css
+++ b/css/footer.css
@@ -1,19 +1,22 @@
 .footer{
     width: 100%;
-    display: block;
-    padding: 135px 10% 65px 10%;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
     min-height: 300px;
+    justify-content: center;
+    align-items: center;
 }
-@media(max-width:1350px){
+@media(max-width:600px){
     .footer{
-        text-align: center;
+        flex-direction: column;
     }
 }
 .footer-inner{
     display: inline-block;
-    width: 300px;
+    width: 25%;
     font-family: 'Exo',sans-serif;
-    min-width: 300px;
+    /* min-width: 300px; */
     text-align: center;
    
 }
@@ -44,6 +47,7 @@ transition:0.7s;
     border-top-right-radius: 5px;
     border-bottom-right-radius: 5px;
     background-color: #ff6d6d;
+    border:#ff6d6d;
     cursor: pointer;
     transition: 0.7s;
 }
