--- a/css/introduction.css
+++ b/css/introduction.css
@@ -47,6 +47,7 @@
     font-size: 40px;
     line-height: 50px;
     letter-spacing: 1px;
+    font-weight: 600;
 }
 .introduction p{
     color: #282828;
