--- a/css/registration.css
+++ b/css/registration.css
@@ -34,12 +34,12 @@
     font-size: 16px;
     letter-spacing: 1px;
     text-transform: uppercase;
+    transition: all 0.2s;
 }
-.reg-input :focus{
-    outline: none;
-    border: #ff6d6d;
+.reg-input:focus{
+    border: 2px solid #ff6d6d;
+    outline:none;
 }
-
 .reg-submit{
     background-color: #ff6d6d;
     border: 2px solid #ff6d6d;
@@ -52,6 +52,10 @@
     letter-spacing: 3px;
     font-size: 17px;
     color: #FFFFFF;
+    transition: all 0.7s;
+}
+.reg-submit:hover{
+    box-shadow: 0px 0px 5px 3px rgb(255,109,109);
 }
 .form-container a{
     color: #FFFFFF;
